# portfolio.paelias.xyz

./: Cargo.toml  README.md  index.html
public/: style.css
src/: application.rs  main.rs
