[package]
name = "portfolio-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-storage = "0.2.2"
log = "0.4.17"
serde = "1.0.152"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
