[package]
name = "portfolio-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-storage = "0.2.2"
log = "0.4.17"
serde = "1.0.152"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = ["HtmlHtmlElement", "DomStringMap", "HtmlElement", "Element"] }
yew = { version = "0.20.0", features = ["csr"] }
